<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 tools:context=".AddActivity">
	
	<android.support.constraint.ConstraintLayout
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 tools:context="com.akaldobaie.udacity.abnd.inventoryapp.AddActivity">
		
		<TextView
			 android:id="@+id/name_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/addProduct"
			 android:text="@string/product_name"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toTopOf="parent"/>
		
		<EditText
			 android:id="@+id/add_product_name_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/product_name_hint"
			 android:inputType="textPersonName"
			 app:layout_constraintBottom_toBottomOf="@+id/name_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/name_text_view"
			 app:layout_constraintTop_toTopOf="parent"/>
		
		<TextView
			 android:id="@+id/price_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/addProduct"
			 android:text="@string/product_price"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/name_text_view"/>
		
		<EditText
			 android:id="@+id/add_product_price_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/product_price_hint"
			 android:inputType="numberDecimal"
			 app:layout_constraintBottom_toBottomOf="@+id/price_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/price_text_view"/>
		
		<TextView
			 android:id="@+id/quantity_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/addProduct"
			 android:text="@string/product_quantity"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/price_text_view"/>
		
		<EditText
			 android:id="@+id/add_product_quantity_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/product_quantity_hint"
			 android:inputType="number"
			 app:layout_constraintBottom_toBottomOf="@+id/quantity_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/quantity_text_view"/>
		
		<TextView
			 android:id="@+id/image_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/addProduct"
			 android:text="@string/product_image"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/quantity_text_view"/>
		
		<EditText
			 android:id="@+id/add_product_image_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/select_image"
			 app:layout_constraintBottom_toBottomOf="@+id/image_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/image_text_view"/>
		
		<TextView
			 android:id="@+id/supplier_name_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/add_supplier_name_edit_text"
			 android:text="@string/supplier_name"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/image_text_view"/>
		
		<EditText
			 android:id="@+id/add_supplier_name_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/supplier_name_hint"
			 android:inputType="textPersonName"
			 app:layout_constraintBottom_toBottomOf="@+id/supplier_name_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/supplier_name_text_view"/>
		
		<TextView
			 android:id="@+id/supplier_email_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/add_supplier_email_edit_text"
			 android:text="@string/supplier_email"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/supplier_name_text_view"/>
		
		<EditText
			 android:id="@+id/add_supplier_email_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/supplier_email_hint"
			 android:inputType="textEmailAddress"
			 app:layout_constraintBottom_toBottomOf="@+id/supplier_email_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/supplier_email_text_view"/>
		
		<TextView
			 android:id="@+id/supplier_phone_number_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/add_supplier_phone_number_edit_text"
			 android:text="@string/supplier_phone"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/supplier_email_text_view"/>
		
		<EditText
			 android:id="@+id/add_supplier_phone_number_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/supplier_phone_hint"
			 android:inputType="phone"
			 app:layout_constraintBottom_toBottomOf="@+id/supplier_phone_number_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/supplier_phone_number_text_view"/>
	
	</android.support.constraint.ConstraintLayout>
</ScrollView>