<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 tools:context=".DetailActivity">
	
	<android.support.constraint.ConstraintLayout
		 xmlns:android="http://schemas.android.com/apk/res/android"
		 xmlns:app="http://schemas.android.com/apk/res-auto"
		 xmlns:tools="http://schemas.android.com/tools"
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 tools:context="com.akaldobaie.udacity.abnd.inventoryapp.DetailActivity">
		
		<TextView
			 android:id="@+id/name_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/addProduct"
			 android:text="@string/product_name"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toTopOf="parent"/>
		
		<TextView
			 android:id="@+id/add_product_name_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/product_name_hint"
			 app:layout_constraintBottom_toBottomOf="@+id/name_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/name_text_view"
			 app:layout_constraintTop_toTopOf="parent"/>
		
		<TextView
			 android:id="@+id/price_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/addProduct"
			 android:text="@string/product_price"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/name_text_view"/>
		
		<TextView
			 android:id="@+id/add_product_price_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:hint="@string/product_price_hint"
			 app:layout_constraintBottom_toBottomOf="@+id/price_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/price_text_view"/>
		
		<TextView
			 android:id="@+id/quantity_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/addProduct"
			 android:text="@string/product_quantity"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/price_text_view"/>
		
		<ImageButton
			 android:id="@+id/quantity_decrease_button"
			 style="@style/AddProductImageButton"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:contentDescription="@string/decrease_quantity_description"
			 android:src="@drawable/ic_subtract"
			 android:tint="@color/colorAccent"
			 app:layout_constraintBottom_toBottomOf="@+id/quantity_text_view"
			 app:layout_constraintStart_toEndOf="@+id/quantity_text_view"/>
		
		<TextView
			 android:id="@+id/add_product_quantity_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:textAlignment="center"
			 app:layout_constraintBottom_toBottomOf="@+id/quantity_text_view"
			 app:layout_constraintEnd_toStartOf="@id/quantity_increase_button"
			 app:layout_constraintStart_toEndOf="@+id/quantity_decrease_button"/>
		
		<ImageButton
			 android:id="@+id/quantity_increase_button"
			 style="@style/AddProductImageButton"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:contentDescription="@string/increase_quantity_description"
			 android:src="@drawable/ic_add"
			 android:tint="@color/colorAccent"
			 app:layout_constraintBottom_toBottomOf="@+id/quantity_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/add_product_quantity_edit_text"/>
		
		<TextView
			 android:id="@+id/image_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/addProduct"
			 android:text="@string/product_image"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/quantity_text_view"/>
		
		<TextView
			 android:id="@+id/add_product_image_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 app:layout_constraintBottom_toBottomOf="@+id/image_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/image_text_view"/>
		
		<TextView
			 android:id="@+id/supplier_name_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/add_supplier_name_edit_text"
			 android:text="@string/supplier_name"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/image_text_view"/>
		
		<TextView
			 android:id="@+id/add_supplier_name_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 app:layout_constraintBottom_toBottomOf="@+id/supplier_name_text_view"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/supplier_name_text_view"/>
		
		<TextView
			 android:id="@+id/supplier_email_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/add_supplier_email_edit_text"
			 android:text="@string/supplier_email"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/supplier_name_text_view"/>
		
		<TextView
			 android:id="@+id/add_supplier_email_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:autoLink="email"
			 app:layout_constraintBottom_toBottomOf="@+id/supplier_email_text_view"
			 app:layout_constraintEnd_toStartOf="@id/email_button"
			 app:layout_constraintStart_toEndOf="@+id/supplier_email_text_view"/>
		
		<ImageButton
			 android:id="@+id/email_button"
			 style="@style/AddProductImageButton"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:contentDescription="@string/email_button_description"
			 android:src="@drawable/ic_email"
			 android:tint="@color/colorAccent"
			 app:layout_constraintBottom_toBottomOf="@+id/add_supplier_email_edit_text"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/add_supplier_email_edit_text"/>
		
		<TextView
			 android:id="@+id/supplier_phone_number_text_view"
			 style="@style/AddProductView"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:labelFor="@+id/add_supplier_phone_number_edit_text"
			 android:text="@string/supplier_phone"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toBottomOf="@+id/supplier_email_text_view"/>
		
		<TextView
			 android:id="@+id/add_supplier_phone_number_edit_text"
			 style="@style/AddProductView"
			 android:layout_width="0dp"
			 android:layout_height="wrap_content"
			 android:autoLink="phone"
			 app:layout_constraintBottom_toBottomOf="@+id/supplier_phone_number_text_view"
			 app:layout_constraintEnd_toStartOf="@id/call_button"
			 app:layout_constraintStart_toEndOf="@+id/supplier_phone_number_text_view"/>
		
		<ImageButton
			 android:id="@+id/call_button"
			 style="@style/AddProductImageButton"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:contentDescription="@string/call_button_description"
			 android:src="@drawable/ic_call"
			 android:tint="@color/colorAccent"
			 app:layout_constraintBottom_toBottomOf="@+id/add_supplier_phone_number_edit_text"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintStart_toEndOf="@+id/add_supplier_phone_number_edit_text"/>
	
	</android.support.constraint.ConstraintLayout>
</ScrollView>