<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	 xmlns:android="http://schemas.android.com/apk/res/android"
	 xmlns:app="http://schemas.android.com/apk/res-auto"
	 xmlns:tools="http://schemas.android.com/tools"
	 android:layout_width="match_parent"
	 android:layout_height="match_parent"
	 tools:context="com.akaldobaie.udacity.abnd.inventoryapp.MainActivity">
	
	<android.support.constraint.ConstraintLayout
		 android:id="@+id/header"
		 android:layout_width="match_parent"
		 android:layout_height="wrap_content"
		 android:layout_gravity="center_vertical|start"
		 android:paddingTop="@dimen/productListViewHeaderMargin"
		 android:paddingBottom="@dimen/productListViewHeaderMargin"
		 android:paddingStart="@dimen/productListViewHeaderSidesMargin"
		 android:paddingEnd="@dimen/productListViewHeaderSidesMargin">
		
		<TextView
			 android:id="@+id/product_name_text_view"
			 style="@style/ProductListViewHeader"
			 android:layout_width="0dp"
			 android:layout_height="match_parent"
			 android:text="@string/header_name"
			 app:layout_constraintBottom_toBottomOf="parent"
			 app:layout_constraintEnd_toStartOf="@id/product_price_text_view"
			 app:layout_constraintHorizontal_bias="0.0"
			 app:layout_constraintStart_toStartOf="parent"
			 app:layout_constraintTop_toTopOf="parent"/>
		
		<TextView
			 android:id="@+id/product_price_text_view"
			 style="@style/ProductListViewHeader"
			 android:layout_width="wrap_content"
			 android:layout_height="match_parent"
			 android:text="@string/header_price"
			 app:layout_constraintBottom_toBottomOf="parent"
			 app:layout_constraintEnd_toStartOf="@id/product_quantity_text_view"
			 app:layout_constraintHorizontal_bias="0.5"
			 app:layout_constraintStart_toEndOf="@id/product_name_text_view"
			 app:layout_constraintTop_toTopOf="parent"/>
		
		<TextView
			 android:id="@+id/product_quantity_text_view"
			 style="@style/ProductListViewHeader"
			 android:layout_width="wrap_content"
			 android:layout_height="match_parent"
			 android:text="@string/header_quantity"
			 app:layout_constraintBottom_toBottomOf="parent"
			 app:layout_constraintEnd_toStartOf="@id/sale_button"
			 app:layout_constraintHorizontal_bias="1.0"
			 app:layout_constraintStart_toEndOf="@id/product_price_text_view"
			 app:layout_constraintTop_toTopOf="parent"
			 tools:layout_editor_absoluteY="16dp"/>
		
		<TextView
			 android:id="@+id/sale_button"
			 style="@style/ProductListViewHeader"
			 android:layout_width="wrap_content"
			 android:layout_height="match_parent"
			 android:text="@string/header_sale"
			 app:layout_constraintBottom_toBottomOf="parent"
			 app:layout_constraintEnd_toEndOf="parent"
			 app:layout_constraintHorizontal_bias="1.0"
			 app:layout_constraintTop_toTopOf="parent"/>
	</android.support.constraint.ConstraintLayout>
	
	<ListView
		 android:id="@+id/product_list_view"
		 android:layout_width="match_parent"
		 android:layout_height="0dp"
		 app:layout_constraintTop_toBottomOf="@id/header"
		 app:layout_constraintBottom_toBottomOf="parent"/>
	
	<!-- If @product_list_view is empty, then default to the following -->
	<RelativeLayout
		 android:id="@+id/empty_view"
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content"
		 android:layout_centerInParent="true"
		 android:layout_margin="@dimen/EmptyViewMargin"
		 app:layout_constraintBottom_toBottomOf="parent"
		 app:layout_constraintEnd_toEndOf="parent"
		 app:layout_constraintStart_toStartOf="parent"
		 app:layout_constraintTop_toTopOf="parent">
		
		<ImageView
			 android:id="@+id/empty_shelter_image"
			 android:layout_width="160dp"
			 android:layout_height="160dp"
			 android:layout_centerHorizontal="true"
			 android:contentDescription="@string/empty_list_message_image"
			 android:src="@mipmap/ic_store"/>
		
		<TextView
			 android:id="@+id/empty_title_text"
			 style="@style/EmptyListViewTitle"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:layout_below="@+id/empty_shelter_image"
			 android:layout_centerHorizontal="true"
			 android:text="@string/empty_list_view_title_text_view"/>
		
		<TextView
			 android:id="@+id/empty_subtitle_text"
			 style="@style/EmptyListViewSubtitle"
			 android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 android:layout_below="@+id/empty_title_text"
			 android:layout_centerHorizontal="true"
			 android:text="@string/empty_list_view_subtitle_text_view"/>
	</RelativeLayout>

</android.support.constraint.ConstraintLayout>
